test/src/e2e_vm_tests/test_programs/should_fail/self_used_without_self_parameter/src/main.sw
library;

struct S {}

impl S {
    fn use_self_method() {
        let _ = self.x();
    }

    fn use_self_value() {
        let _ = self;
    }

    fn x(self) -> u64 {
        0
    }
}
